--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
 canvas {
   display: block;
+}
+
+#inner_container {
+  width: 800px;
+}
+
+#image_shower {
+  width: 800px;
+}
+
+#image_name_container {
+  text-align: center;
 }
