--- a/style.css
+++ b/style.css
@@ -1,20 +1,147 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-image: url('images/Background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-canvas {
-  display: block;
+div.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+img {
+    float: center;
+    width:  500px;
+    height: 500px;
+    object-fit: cover;
+    border: 4px solid green;
 }
 
-#inner_container {
-  width: 800px;
+button {
+  height: 50px;
+  width: 100px;
+  margin: 10px;
+  border: none;
+  color: white;
+  background-color: rgb(0, 51, 0);
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 0 #1FFF06;
+  transition: ease-out 0.3s;
+  outline: none;
 }
 
-#image_shower {
-  width: 800px;
+button:hover {
+  box-shadow: inset 100px 0 0 0 #1FFF06;
 }
 
-#image_name_container {
+div.row {
   text-align: center;
+  width: 100%;
+}
+
+p.description {
+  color: green;
+  width: 400px;
+  border: 4px solid green;
+  padding: 50px;
+  margin: auto;
+}
+.animation-area{
+  width: 100%;
+  height: 100vh;
+}
+.box-area{
+   position: absolute;
+   top: 100px;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+}
+.box-area li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255,0,0,0.2);
+  animation: animate 20s linear infinite;
+  bottom: 50px;
+}
+.box-area li:nth-child(1){
+  left: 10%;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(2){
+  left: 20%;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+.box-area li:nth-child(3){
+  left: 90%;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  animation-delay: 5.5s;
+}
+.box-area li:nth-child(4){
+  left: 80%;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  animation-delay: 0s;
+  animation-duration: 15s;
+}
+.box-area li:nth-child(5){
+  left: 30%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(6){
+  left: 65%;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  animation-delay: 3.5s;
+}
+.box-area li:nth-child(7){
+  left: 35%;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  animation-delay: 3.5s;
+}
+.box-area li:nth-child(8){
+  left: 55%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  animation-delay: 3.5s;
+}
+.box-area li:nth-child(9){
+  left: 45%;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  animation-delay: 3.5s;
+}
+@keyframes animate{
+  0%{
+     transform: translateY(0) rotate (0deg);
+     opacity: 1;
+  }
+  100%{
+    transform: translateY(-800px) rotate(360deg);
+    opacity: 0;
+  }
 }
